<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#fffffeef">

    <TextView android:text="@string/title" android:layout_width="@dimen/dialog_fixed_width_major"
        android:layout_height="60dp"
        android:layout_marginTop="69dp"
        android:textSize="35sp"
        android:id="@+id/titleText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="@dimen/dialog_fixed_width_major"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/subtitle"
        android:id="@+id/infoText"
        android:textSize="12.5sp"
        android:autoText="false"
        android:elegantTextHeight="false"
        android:layout_below="@+id/titleText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/num_quiz"
        android:id="@+id/totQText"
        android:layout_below="@+id/infoText"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:id="@+id/warningImage"
        android:src="@drawable/warning"
        android:contentDescription="@string/warningDescription"
        android:layout_alignTop="@+id/warningText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/info"
        android:id="@+id/warningText"
        android:textSize="14sp"
        android:layout_above="@+id/startButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="31dp"
        android:layout_toRightOf="@+id/warningImage"
        android:layout_toEndOf="@+id/warningImage" />

    <Button
        android:layout_width="@dimen/dialog_fixed_width_major"
        android:layout_height="125dp"
        android:text="@string/start"
        android:id="@+id/startButton"
        android:textSize="50sp"
        android:textStyle="normal"
        android:textColor="#fffffefc"
        android:background="#ff8feaff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="45dp" />

</RelativeLayout>
